--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Rosie</title>
+
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+    (function(){
+        emailjs.init("paDRRdt4fixvwhTNk");
+        emailjs.send("service_w47eqmz", "rosie", {
+                name: "Brían",
+                notes: "The project that I want is..."
+            })
+    })();
+    </script>
 </head>
 <body>
     <header>
