--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,8 @@
     </script>
     <script type="text/javascript">
     (function(){
-        emailjs.init("paDRRdt4fixvwhTNk");
-        emailjs.send("service_w47eqmz", "rosie", {
+        emailjs.init("API_KEY");
+        emailjs.send("service_name", "rosie", {
                 name: "Brían",
                 notes: "The project that I want is..."
             })
